[package]
name = "fledgeos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.22"
x86_64 = "0.14.10"

[package.metadata.bootimage]
build-command = ["build"]

run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,file={}"
]
